# 1INF25-Programacion-2

./: .gitignore  README.md
Clase 2/: Ejercicio_Hora.py
Proyectos/Laboratorio1/LAB01_2024_1_20233905_Romero_Luna_Binny/CrearBiblioteca/BibliotecaCompilada/: CMakeLists.txt
Proyectos/Laboratorio1/LAB01_2024_1_20233905_Romero_Luna_Binny/CrearBiblioteca/Fuentes_2024_1/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio1/LAB01_2024_1_20233905_Romero_Luna_Binny/CrearBiblioteca/Fuentes_2024_1/src/: AperturaDeArchivos.hpp  Sobrecargas.cpp  Sobrecargas.hpp
Proyectos/Laboratorio1/LAB01_2024_1_20233905_Romero_Luna_Binny/CrearBiblioteca/Prueba_Compilada/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio1/LAB01_2024_1_20233905_Romero_Luna_Binny/UsarBiblioteca/UnaAplicacionConBibEstatica/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio1/LAB01_2024_1_20233905_Romero_Luna_Binny/UsarBiblioteca/UnaAplicacionConBibEstatica/src/: Funciones.cpp  Funciones.hpp  Sobrecargas.hpp
Proyectos/Laboratorio1/LAB01_2024_2_2023395_Romero_Binny/Parte1_CrearBiblioteca/Proyecto_Fuente_2024_1/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio1/LAB01_2024_2_2023395_Romero_Binny/Parte1_CrearBiblioteca/Proyecto_Fuente_2024_1/src/: Sobrecarga.cpp  Sobrecarga.hpp
Proyectos/Laboratorio1/Lab01_2024_2/CrearBiblioteca_Parte1/Biblioteca_Compiliada_2024_1/: CMakeLists.txt
Proyectos/Laboratorio1/Lab01_2024_2/CrearBiblioteca_Parte1/Fuentes_Biblioteca_2024_2/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio1/Lab01_2024_2/CrearBiblioteca_Parte1/Fuentes_Biblioteca_2024_2/src/: Estructuras.h
Proyectos/Laboratorio1/Lab01_2024_2/CrearBiblioteca_Parte1/Prueba_Biblioteca_Compilada_2024_2/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio1/Lab01_2024_2/CrearBiblioteca_Parte1/Prueba_Biblioteca_Compilada_2024_2/src/: Sobrecargas.hpp
Proyectos/Laboratorio1/Sobrecarga/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio1/Sobrecarga/Librerias/: Funciones.cpp  Funciones.hpp  Utils.hpp  Vector2D.hpp
Proyectos/Laboratorio1/Sobrecarga_Lectura_Escritura/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio1/Sobrecarga_Lectura_Escritura/src/: FuncionesAux.cpp  FuncionesAux.hpp  Review.hpp  Reviews.hpp  Sobrecarga.cpp  Sobrecarga.hpp  Utils.hpp
Proyectos/Laboratorio2/Exacta_Incremento/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio2/Exacta_Incremento/src/: Funciones.cpp  Funciones.hpp  Utils.hpp
Proyectos/Laboratorio2/Incrementos_Registros/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio2/Incrementos_Registros/src/: Funciones.cpp  Funciones.hpp  Utils.hpp
Proyectos/Laboratorio2/Incrementos_Registros_Version2/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio2/Incrementos_Registros_Version2/src/: Funciones.cpp  Funciones.hpp  Utils.hpp
Proyectos/Laboratorio2/Laboratorio2_2023_2/: CMakeLists.txt
Proyectos/Laboratorio2/Laboratorio2_22033905_Romero_Binny/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio2/Laboratorio2_22033905_Romero_Binny/src/: Conductores.hpp  Faltas.hpp  Funciones.cpp  Funciones.hpp  Infracciones.hpp  Utils.hpp
Proyectos/Laboratorio2/Memoria_Incrementos_Ordenado/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio2/Memoria_Incrementos_Ordenado/src/: Funciones.cpp  Funciones.hpp  Utils.hpp
Proyectos/Laboratorio2/Memoria_Por_Incremento/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio2/Memoria_Por_Incremento/src/: MemoriaIncrementos.cpp  MemoriaIncrementos.hpp  Utils.hpp
Proyectos/Laboratorio3/Laboratorio_2024_1/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio3/Laboratorio_2024_1/src/: Funciones_Genericas.cpp  Funciones_Genericas.hpp  Utils.hpp
Proyectos/Laboratorio3/Teoria_Punteros_Genericos/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio3/Teoria_Punteros_Genericos/src/: Funciones.cpp  Funciones.hpp  Utils.hpp
Proyectos/Laboratorio4/Ejercicio_BibGenerica_BibCadaVariable/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio4/Ejercicio_BibGenerica_BibCadaVariable/src/: BibliotecaEnteros.cpp  BibliotecaEnteros.hpp  BibliotecaGenerica.cpp  BibliotecaGenerica.hpp  Utils.hpp
Proyectos/Laboratorio4/Laboratorio5_2024_1/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio4/Laboratorio5_2024_1/src/: BibliotecaGenerica.cpp  BibliotecaGenerica.hpp  BibliotecaRegistro.cpp  BibliotecaRegistro.hpp  FuncionEnteros.cpp  FuncionEnteros.hpp  Utils.hpp
Proyectos/Laboratorio4/Laboratorio5_2024_2/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio4/Laboratorio5_2024_2/src/: BibliotecaGenerica.cpp  BibliotecaGenerica.hpp  ListaconEnteros.cpp  ListaconEnteros.hpp  Utils.hpp
Proyectos/Laboratorio4/Laboratorio_4_2025_1/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio4/Laboratorio_4_2025_1/src/: BibliotecaEnteros.cpp  BibliotecaEnteros.hpp  BibliotecaGenerica.cpp  BibliotecaGenerica.hpp  BibliotecaRegistros.cpp  BibliotecaRegistros.hpp  Utils.hpp
Proyectos/Laboratorio4/Lista/: CMakeLists.txt  main.cpp
Proyectos/Laboratorio4/Lista/src/: BibliotecaGenerica.cpp  BibliotecaGenerica.hpp  ListaEmpleados.cpp  ListaEmpleados.hpp  Utils.hpp
Proyectos/Laboratorio4/Puntero_a_Funciones/: CMakeLists.txt  main.cpp
(+1 files in other folders)
