cmake_minimum_required(VERSION 4.0)
project(Laboratorio2_22033905_Romero_Binny)

set(CMAKE_CXX_STANDARD 20)

add_executable(Laboratorio2_22033905_Romero_Binny main.cpp
        src/Funciones.cpp
        src/Funciones.hpp
        src/Utils.hpp
        src/Conductores.hpp
        src/Infracciones.hpp
        src/Faltas.hpp
)
